# btrfs-snapshots

./: Makefile  Post_03_make_snapshot.hook  Post_03_make_snapshots.hook  Pre_03_make_snapshot.hook  README.md  auto-snapshot.service  auto-snapshot.timer  btrfs-snapshots-schemas.pc.in  config.mk  meson.build  repomenu_snapper  repomenue_snapshots  snapexec  snaphome  snaplist  snapmake  snaproot  snapshot
opt/btrfs-snapshots/: preferences.json
schemas/: btrfs-snapshots-schemas.convert  meson.build  org.therepoclub.btrfs-snapshots.preferences.gschema.xml.in  org.therepoclub.repomenu.snapshots.preferences.gschema.xml.in  repomenu-snapshots-schemas.convert
